Updated with FindBugs suggestions